<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Open Weather</string>
    <string name="action_settings">Settings</string>
    <string name="city_search">City search</string>
    <string name="dt_delete_item">Delete city</string>
    <string name="dm_delete_item">Do you want delete city ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="option_F">°F</string>
    <string name="ok">OK</string>
    <string name="option_C">°C</string>
    <string name="settings">Settings</string>

    <string name="default_city">Paris</string>
    <string name="default_temp">10°C</string>
    <string name="default_date">Day</string>
    <string name="default_temp_eve">Evening</string>
    <string name="default_temp_mor">Morning</string>
    <string name="default_temp_night">Night</string>
    <string name="default_information">Temperature</string>
    <string name="default_data">15°C</string>
    <string name="default_refresh">Refresh data.</string>
    <string name="default_wait">Please wait &#8230;</string>
    
    <string name="cd_home">Back to home</string>
    <string name="cd_main">The main</string>
    <string name="cd_loader">Loading.</string>
    
    <string name="type_info">Information</string>
    <string name="type_temp">Temperature</string>
    <string name="type_wind">Wind</string>
    <string name="type_humidity">Humidity</string>
    <string name="type_daily">Daily weather</string>
    
    
    <string name="error_get_location">Cannot get Location.</string>
    <string name="error_conf_convert_json">Cannot convert the configuration data.</string>
    <string name="error_constant_file_create">Error create data application.</string>
    <string name="error_filewritter_close">Cannot close file.</string>
    <string name="error_save_conf">Cannot save configuration.</string>
    <string name="error_read_conf_file">Cannot read the file configuration</string>
    <string name="error_malformed_conf">Configuration is corrupted.</string>
</resources>
